--- a/nginx.conf
+++ b/nginx.conf
@@ -2,31 +2,60 @@ worker_processes auto;
 rtmp_auto_push on;
 
 events {
-  worker_connections  4096;
+  worker_connections  1024;
 }
 
 http {
+  sendfile off;
+  tcp_nopush on;
+  directio 512;
+  default_type application/octet-stream;
+
   server {
-    listen 80;
+    listen 8080;
 
     location / {
-      index index.html;
-      root  /html;
-    }
+      # Disable cache
+      add_header 'Cache-Control' 'no-cache';
 
-    location ~ /\. {
-      deny all;
+      # CORS setup
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Expose-Headers' 'Content-Length';
+
+      # allow CORS preflight requests
+      if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+        return 204;
+      }
+
+      types {
+        application/dash+xml mpd;
+        application/vnd.apple.mpegurl m3u8;
+        video/mp2t ts;
+      }
+
+      root /mnt/;
     }
   }
 }
 
 rtmp {
   server {
-    listen 1935;
+    listen 1935; # Listen on standard RTMP port
+    chunk_size 4000;
 
-    application live {
-      live on;
-      record off;
+    application show {
+    live on;
+    # Turn on HLS
+    hls on;
+    hls_path /mnt/hls/;
+    hls_fragment 3;
+    hls_playlist_length 60;
+    # disable consuming the stream from nginx as rtmp
+    deny play all;
     }
   }
 }
