--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ rtmp {
       hls_playlist_length 60;
 
       # disable consuming the stream from nginx as rtmp
-      deny play all;
+      allow play 127.0.0.1;
     }
   }
 }
